Closed Bug 1580220 Opened 5 years ago Closed 5 years ago

Fix "uncaught exception: Object" console messages which show up often in test runs

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Fission Milestone M4
Tracking Status
firefox71 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Most of these are due to promise rejections which are cross-compartment wrappers. Some of them are plain objects of other sorts that we can't report in meaningful ways, and I'm ignoring for now.

Status: NEW → ASSIGNED
Fission Milestone: --- → M4
Priority: -- → P2
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/6b7056712cb4 Fix unhandled rejection logging for cross-origin objects. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: