Bug 1580220: Fix unhandled rejection logging for cross-origin objects. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D45362