dom/promise/tests/unit/test_promise_unhandled_rejection.js
@@ -12,18 +12,12 @@ const { PromiseTestUtils } = ChromeUtils.import(
 );
 
 PromiseTestUtils.expectUncaughtRejection(/could not be cloned/);
+PromiseTestUtils.expectUncaughtRejection(/Bleah/);
 
-add_task(async function test_unhandled_dom_exception() {
-  let sandbox = Cu.Sandbox(Services.scriptSecurityManager.getSystemPrincipal());
-  sandbox.StructuredCloneHolder = StructuredCloneHolder;
+const filename = "resource://foo/Bar.jsm";
 
-  let filename = "resource://foo/Bar.jsm";
-
+async function getSandboxMessages(sandbox, code) {
   let { messages } = await AddonTestUtils.promiseConsoleOutput(async () => {
-    let code = `new Promise(() => {
-      new StructuredCloneHolder(() => {});
-    });`;
-
     Cu.evalInSandbox(code, sandbox, null, filename, 1);
 
     // We need two trips through the event loop for this error to be reported.
@@ -33,11 +27,23 @@ add_task(async function test_unhandled_dom_exception() {
 
   // xpcshell tests on OS-X sometimes include an extra warning, which we
   // unfortunately need to ignore:
-  messages = messages.filter(
+  return messages.filter(
     msg =>
       !msg.message.includes(
         "No chrome package registered for chrome://branding/locale/brand.properties"
       )
+  );
+}
+
+add_task(async function test_unhandled_dom_exception() {
+  let sandbox = Cu.Sandbox(Services.scriptSecurityManager.getSystemPrincipal());
+  sandbox.StructuredCloneHolder = StructuredCloneHolder;
+
+  let messages = await getSandboxMessages(
+    sandbox,
+    `new Promise(() => {
+      new StructuredCloneHolder(() => {});
+    });`
   );
 
   equal(messages.length, 1, "Got one console message");
@@ -49,6 +55,44 @@ add_task(async function test_unhandled_dom_exception() {
   equal(
     msg.errorMessage,
     "DataCloneError: The object could not be cloned.",
+    "Got expected error message"
+  );
+});
+
+add_task(async function test_unhandled_dom_exception_wrapped() {
+  let sandbox = Cu.Sandbox(
+    Services.scriptSecurityManager.createContentPrincipalFromOrigin(
+      "http://example.com/"
+    )
+  );
+  Cu.exportFunction(
+    function frick() {
+      throw new Components.Exception(
+        "Bleah.",
+        Cr.NS_ERROR_FAILURE,
+        Components.stack.caller
+      );
+    },
+    sandbox,
+    { defineAs: "frick" }
+  );
+
+  let messages = await getSandboxMessages(
+    sandbox,
+    `new Promise(() => {
+      frick();
+    });`
+  );
+
+  equal(messages.length, 1, "Got one console message");
+
+  let [msg] = messages;
+  ok(msg instanceof Ci.nsIScriptError, "Message is a script error");
+  equal(msg.sourceName, filename, "Got expected filename");
+  equal(msg.lineNumber, 2, "Got expected line number");
+  equal(
+    msg.errorMessage,
+    "NS_ERROR_FAILURE: Bleah.",
     "Got expected error message"
   );
 });
